Move app_config vars into config.yml for consistency

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -1,5 +1,7 @@
 strategy: dropbox
 
+dropbox_app_key: AAAAAAAAAAAAAAA
+dropbox_app_secret: BBBBBBBBBBBBBBB
 dropbox_client_token: XXXXXXXXXXXXXXX
 dropbox_client_secret: YYYYYYYYYYYYYYY
 
